going in a little bit more salt cave direction

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -76,7 +76,14 @@ $deep-blue: hsla(256%, 100%, 24%, 1);
 $blue: hsla(245%, 100%, 32%, 1);
 $black: hsla(247%, 82%, 2%, 1);
 
-$nav-font-color: #ccc;
+
+$primary-orange: #e37652;
+
+
+
+
+
+$nav-font-color: #fff;
 
 // 1. Global
 // ---------
