all kinds of stuff

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -77,13 +77,28 @@ $blue: hsla(245%, 100%, 32%, 1);
 $black: hsla(247%, 82%, 2%, 1);
 
 
+
+
+
+
+
 $primary-orange: #e37652;
+$background-white: #fff;
 
+$button-darken-percent: 10%;
 
-
-
-
+$white-font-color: #fff;
 $nav-font-color: #fff;
+$link-text-color: #5a5a5a;
+
+
+
+
+
+
+
+
+
 
 // 1. Global
 // ---------
